--- a/src/stylesheets/dot.scss
+++ b/src/stylesheets/dot.scss
@@ -1,3 +1,16 @@
-#selected {
-  background-color: red;
+.dot {
+    width: 2rem;
+    height: 2rem;
+    background-color: aqua;
+    border-radius: 50%;
+    align-self: center;
+    justify-self: center;
+    
+  &.player1-claimed {
+    background-color: blue;
+  }
+
+  &.player2-claimed {
+    background-color: red;
+  }
 }
