--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,7 @@ body {
   color: white;
 }
 
-#board {
-  display: grid;
-  grid-template-columns: repeat(4, 195px);
-}
+// #board {
+//   display: grid;
+//   grid-template-columns: repeat(4, 195px);
+// }
