--- a/src/stylesheets/box.scss
+++ b/src/stylesheets/box.scss
@@ -1,12 +1,5 @@
 .box {
+  display: flex;
   width: 100%;
   height: 100%;
-
-  &.player1-claimed {
-    background-color: blue;
-  }
-
-  &.player2-claimed {
-    background-color: red;
-  }
 }
